cargo-features = ["workspace-inheritance"]

[package]
name = "blockstore"
version = "0.1.0"
edition = "2021"

[dependencies.cid]
workspace = true

[dependencies.fvm_ipld_blockstore]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.fvm_sdk]
workspace = true

[build-dependencies]
substrate-wasm-builder = "4.0.0"
