cargo-features = ["workspace-inheritance"]

[package]
name = "custody"
version = "0.1.0"
edition = "2021"

[dependencies.fvm_shared]
workspace = true

[dependencies.cid]
workspace = true

[dependencies.miner]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.beneficiary]
workspace = true

[dependencies.libp2p]
workspace = true

[dependencies.multiaddr]
workspace = true

[build-dependencies]
substrate-wasm-builder = "4.0.0"
