cargo-features = ["workspace-inheritance"]

[package]
name = "deposit"
version = "0.1.0"
edition = "2021"

[dependencies.fvm_sdk]
workspace = true

[dependencies.fvm_ipld_encoding]
workspace = true

[dependencies.abort]
workspace = true

[dependencies.fvm_shared]
workspace = true

[build-dependencies]
substrate-wasm-builder = "4.0.0"
